@startuml

title __MAIN's Class Diagram__\n

  namespace com.example {
    namespace admininterface {
      namespace ui.main {
        class com.example.admininterface.ui.main.PageViewModel {
            - mIndex : MutableLiveData<Integer>
            - mText : LiveData<String>
            + getText()
            + setIndex()
        }
      }
    }
  }
  

  namespace com.example {
    namespace admininterface {
      namespace ui.main {
        class com.example.admininterface.ui.main.PlaceholderFragment {
            {static} - ARG_SECTION_NUMBER : String
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  namespace com.example {
    namespace admininterface {
      namespace ui.main {
        class com.example.admininterface.ui.main.SectionsPagerAdapter {
            {static} - TAB_TITLES : int[]
            - mContext : Context
            + SectionsPagerAdapter()
            + getCount()
            + getItem()
            + getPageTitle()
        }
      }
    }
  }
  

  com.example.admininterface.ui.main.PageViewModel -up-|> androidx.lifecycle.ViewModel
  com.example.admininterface.ui.main.PlaceholderFragment -up-|> androidx.fragment.app.Fragment
  com.example.admininterface.ui.main.PlaceholderFragment o-- com.example.admininterface.ui.main.PageViewModel : pageViewModel
  com.example.admininterface.ui.main.SectionsPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
